# loglens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.bmad-core/: install-manifest.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  prd.md
docs/architecture/: api-reference.md  architectural-design-patterns-adopted.md  coding-standards.md  component-view.md  core-workflow-sequence-diagrams.md  data-models.md  definitive-tech-stack-selections.md  error-handling-strategy.md  high-level-overview.md  index.md  infrastructure-and-deployment-overview.md  introduction-preamble.md  overall-testing-strategy.md  project-structure.md  security-best-practices.md  table-of-contents.md  technical-summary.md
docs/prd/: 1-goal-objective-and-context.md  2-functional-requirements-mvp.md  3-non-functional-requirements-mvp.md  4-user-interaction-and-design-goals.md  5-technical-assumptions.md  6-epic-overview.md  7-key-reference-documents.md  8-out-of-scope-ideas-post-mvp.md  index.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  2.1.story.md  2.2.story.md  2.3.story.md
scripts/: setup-check.py
src/loglens/: __init__.py  main.py  models.py
src/loglens/core/: __init__.py  config.py
src/loglens/services/: __init__.py  detection.py  enrichment.py  ingestion.py  reporting.py
src/loglens/services/parsing/: __init__.py  apache_parser.py  base_parser.py
tests/: __init__.py  test_detection.py  test_enrichment.py  test_ingestion.py  test_main.py  test_parsing.py  test_reporting.py
